--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"memcached": "2.2.1",
 		"jsdog-meli": "0.0.5",
 		"debug": "2.2.0",
-		"async-utils": "0.0.3"
+		"async-utils": "0.0.3",
+		"hashring": "3.1.0"
 	},
 	"devDependencies": {
 		"david": "6.1.5"
