--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"jsdog-meli": "0.0.5",
 		"debug": "2.2.0",
 		"async-utils": "0.0.3",
-		"hashring": "3.2.x"
+		"hashring": "3.2.x",
+		"cls-memcached": "git://github.com/itirabasso/cls-memcached"
 	},
 	"devDependencies": {
 		"david": "6.1.5"
